Added Github link to bottom of page

--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
       
 
      
-     <div class="row">
-       <div class="col-9"></div>
-       <div class="col-2" id="author">Coded by: Zenita H.</div>
+        <div class="row">
+       <div class="col-7"></div>
+       <div class="col-4" id="author">Coded by: Zenita H. on 👉🏾 <span><a href = "https://github.com/zhughes32/Weather-Page" class="gitHub">GitHub</a></span> 👈🏾</div>
     </div>
     <div class="col-1"></div>"
     <script src="src/script.js"></script>
